istio/03_webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-workshop
  labels:
    istio-injection: enabled
