istio/03_webapp/app.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
  name: webapp
spec:
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: quay.io/fairwinds/k8s-workshop:latest
          command: ["ruby", "app/app.rb"]
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - curl
                - localhost:8080
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          ports:
          - containerPort: 8080
            name: http
          volumeMounts:
            - name: secrets
              mountPath: "/etc/secrets"
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 300Mi
      volumes:
        - name: secrets
          secret:
            secretName: webapp
            items:
            - key: val2
              path: secret_file
              mode: 511
