istio/03_webapp/app.istio-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - http:
        paths:
        - path: /webapp/.*
          backend:
            serviceName: webapp
            servicePort: 80
